<resources>
    <string name="app_name">Madina App</string>
    <string name="title_FAdd">Add</string>
    <string name="title_FNeeds">Needs</string>
    <string name="title_FQRC">QRC</string>
    <string name="title_holiday">الأجازة</string>
    <string name="title_needs">مستحقات</string>
    <string name="title_QRC">كودك</string>
    <string name="title_profile">حسابك</string>
    <string name="pass_txt">كلمةالمرور</string>

    <string name="sign_in_btn">تسجيل دخول</string>

    <string name="sign_up_btn">انشاء حساب جديد</string>

    <string name="email_txt">الايميل</string>

    <string name="ssn_txt">الرقم القومي</string>

    <string name="forget_txt">هل نسيت كلمةالمرور؟</string>

    <string name="email_hint">ادخل الايميل</string>

    <string name="pass_hint">ادخل كلمةالمرور</string>

    <string name="ssn_hint">ادخل رقمك القومى</string>

    <string name="name_txt">الاسم رباعي باللغةالعربية</string>

    <string name="adress">العنوان</string>

    <string name="phone_num">رقم الهاتف</string>

    <string name="pass_confir">تاكيد كلمةالمرور</string>

    <string name="welcome_txt">اهلا بك</string>

    <string name="vacation_txt">فترة اجازتك</string>

    <string name="start_date">تاريخ الابتداء</string>

    <string name="end_date">تاريخ الانتهاء</string>

    <string name="confirmation">تاكيد</string>
    <string name="building_num">رقم المبني</string>
    <string name="building_hint">ادخل رقم المبني</string>
    <string name="room_num">رقم الغرفه</string>
    <string name="room_hint">ادخل رقم الغرفه</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qrcSndHint">قم بادخال رقمك القومي</string>
    <string name="createQrcBtn">انشاء</string>
</resources>