<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_add">

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.madinaapp.ui.weekend.WeekendFragment"
        android:label="@string/title_FAdd"
        tools:layout="@layout/fragment_weekend" />

    <fragment
        android:id="@+id/navigation_needs"
        android:name="com.example.madinaapp.ui.needs.NeedsFragment"
        android:label="@string/title_FNeeds"
        tools:layout="@layout/fragment_needs" />

    <fragment
        android:id="@+id/navigation_QRC"
        android:name="com.example.madinaapp.ui.qrc.QRCFragment"
        android:label="@string/title_FQRC"
        tools:layout="@layout/fragment_qrc" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.madinaapp.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>