<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
         <variable
             name="viewModel"
             type="com.example.madinaapp.ui.signUp.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baby_blue">

        <ImageView
            android:id="@+id/shape_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/needs_background"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="125dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logoback"
            app:layout_constraintWidth_percent="0.7"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/card"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_30sdp">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scroll_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/welcome_txt"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/name_txt"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_20sdp"

                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/namelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/edt_txt"
                        android:padding="@dimen/_6sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:hint="@string/name_txt"

                        />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/ssn_txt"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/ssn_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/edt_txt"
                        android:padding="@dimen/_6sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:hint="@string/ssn_hint" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/phone_num"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/edt_txt"
                        android:padding="6dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:hint="@string/phone_num" />

                    <TextView

                        android:layout_width="@dimen/_54sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/adress"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/addressLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/edt_txt"
                        android:padding="@dimen/_6sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:hint="@string/adress" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/email_txt"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/mailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/edt_txt"
                        android:padding="@dimen/_6sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:hint="@string/email_hint"

                        />


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/pass_txt"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/passwordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/edt_txt"
                        android:padding="@dimen/_6sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:hint="@string/pass_hint" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/pass_confir"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/confirmPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/edt_txt"
                        android:padding="@dimen/_6sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:hint="@string/pass_confir" />


                    <Button
                        android:id="@+id/sig_up_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:background="@drawable/sign_in_btn_shape"
                        android:text="@string/sign_up_btn"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />


                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>